--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://kit.fontawesome.com/0154fa8230.js" crossorigin="anonymous"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
   </head>
   <body>
     <noscript>
